--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <h1>The Github Infohub</h1>
-
+    Add Bootstrap
+    Add jQuery
     <script src="jQuery.min.js"></script>
 </body>
 </html>
