--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="utf-8" />
     <title>Github data analysis</title>
+    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen"/>
 </head>
 <body>
     <h1>The Github Infohub</h1>
-    Add Bootstrap
-    Add jQuery
-    <script src="jQuery.min.js"></script>
+    
+    <script src="jquery-1.9.1.min.js"></script>
+    <script src="bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
