now with a little internal link structure.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="github-infohub.css" rel="stylesheet" media="screen" />
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-inverse navbar-fixed-top" id="top-bar">
         <div class="navbar-inner">
             <div class="container">
                 <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -16,17 +16,17 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="brand" href="./index.html">Bootstrap</a>
+                <a class="brand" href="./index.html">Github Infohub</a>
                 <div class="nav-collapse collapse">
                     <ul class="nav">
                         <li class="">
-                            <a href="./index.html">Home</a>
-                        </li>
-                        <li class="active">
-                            <a href="./getting-started.html">Get started</a>
+                            <a href="#top-bar">Home</a>
                         </li>
                         <li class="">
-                            <a href="./scaffolding.html">Scaffolding</a>
+                            <a href="#overview">Heading</a>
+                        </li>
+                        <li class="">
+                            <a href="#general-statistics">General Stats</a>
                         </li>
                         <li class="">
                             <a href="./base-css.html">Base CSS</a>
@@ -53,7 +53,10 @@
         </div>
     </header>
 
-    <script type="text/javascript" src="//ajax.googleapis.com/ajax/static/modules/gviz/1.0/chart.js"> {"dataSourceUrl":"//docs.google.com/spreadsheet/tq?key=0AnWrWP_RUldSdGpfTWZrcUFzNVJsN1E3M3FUQVk4T3c&transpose=0&headers=0&range=E1%3AF10&gid=2&pub=1","options":{"titleTextStyle":{"bold":true,"color":"#000","fontSize":16},"animation":{"duration":0},"colors":["#3366CC","#DC3912","#FF9900","#109618","#990099","#0099C6","#DD4477","#66AA00","#B82E2E","#316395","#994499","#22AA99","#AAAA11","#6633CC","#E67300","#8B0707","#651067","#329262","#5574A6","#3B3EAC","#B77322","#16D620","#B91383","#F4359E","#9C5935","#A9C413","#2A778D","#668D1C","#BEA413","#0C5922","#743411"],"theme":"maximized","width":1425,"is3D":true,"pieSliceText":"percentage","hAxis":{"useFormatFromData":true,"minValue":null,"viewWindow":{"min":null,"max":null},"maxValue":null},"vAxes":[{"useFormatFromData":true,"minValue":null,"viewWindow":{"min":null,"max":null},"maxValue":null},{"useFormatFromData":true,"minValue":null,"viewWindow":{"min":null,"max":null},"maxValue":null}],"pieHole":"0","booleanRole":"certainty","title":"All events 2012","height":560,"legend":"right","pieSliceTextStyle":{"fontSize":"12"}},"state":{},"view":{},"isDefaultVisualization":true,"chartType":"PieChart","chartName":"Chart 2"} </script>
+    <div id="general-statistics">
+        <script type="text/javascript" src="//ajax.googleapis.com/ajax/static/modules/gviz/1.0/chart.js"> {"dataSourceUrl":"//docs.google.com/spreadsheet/tq?key=0AnWrWP_RUldSdGpfTWZrcUFzNVJsN1E3M3FUQVk4T3c&transpose=0&headers=0&range=E1%3AF10&gid=2&pub=1","options":{"titleTextStyle":{"bold":true,"color":"#000","fontSize":16},"animation":{"duration":0},"colors":["#3366CC","#DC3912","#FF9900","#109618","#990099","#0099C6","#DD4477","#66AA00","#B82E2E","#316395","#994499","#22AA99","#AAAA11","#6633CC","#E67300","#8B0707","#651067","#329262","#5574A6","#3B3EAC","#B77322","#16D620","#B91383","#F4359E","#9C5935","#A9C413","#2A778D","#668D1C","#BEA413","#0C5922","#743411"],"theme":"maximized","width":1425,"is3D":true,"pieSliceText":"percentage","hAxis":{"useFormatFromData":true,"minValue":null,"viewWindow":{"min":null,"max":null},"maxValue":null},"vAxes":[{"useFormatFromData":true,"minValue":null,"viewWindow":{"min":null,"max":null},"maxValue":null},{"useFormatFromData":true,"minValue":null,"viewWindow":{"min":null,"max":null},"maxValue":null}],"pieHole":"0","booleanRole":"certainty","title":"All events 2012","height":560,"legend":"right","pieSliceTextStyle":{"fontSize":"12"}},"state":{},"view":{},"isDefaultVisualization":true,"chartType":"PieChart","chartName":"Chart 2"} </script>
+    </div>
+
     <script src="jquery-1.9.1.min.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
 </body>
