now given up making internal links work - for now anyways.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="nav-collapse collapse">
                     <ul class="nav">
                         <li class="">
-                            <a href="#before-general-statistics">All</a> <!--should really be #general-statistics, but it doesn't go to the rigth place and no time life is short. hack, and be happy.-->
+                            <a href="#general-statistics">All</a> <!--should really be #general-statistics, but it doesn't go to the rigth place and no time life is short. hack, and be happy.-->
                         </li>
                         <li class="">
                             <a href="#source-code-statistics">Source Code</a>
